refactor:Refactor Controller and repository code
